<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.co.tjeit.mobileshopper.ShopInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/pointBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/point_info"/>
        <Button
            android:id="@+id/buyRecordBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/buy_recoding"/>
        <Button
            android:id="@+id/produceAddBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/product_add"/>
    </LinearLayout>



</LinearLayout>
